force-app/main/default/objects/leaseworks__Portal_Asset__c/leaseworks__Portal_Asset__c.object-meta.xml
<CustomObject>
    <label>Portal Asset</label>
    <nameField>
        <label>Portal Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>