force-app/main/default/objects/leaseworks__Portal_Asset__c/fields/leaseworks__Asset_Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Variant__c</fullName>
    <label>Asset Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Asset_Variant_Global</valueSetName>
    </valueSet>
</CustomField>