force-app/main/default/objects/leaseworks__Portal_Asset__c/fields/leaseworks__Available_From__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Available_From__c</fullName>
    <label>_Available From</label>
    <type>Date</type>
</CustomField>