force-app/main/default/objects/leaseworks__Portal_Asset__c/fields/leaseworks__Available_From_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Available_From_F__c</fullName>
    <description>Fortress :This field is set to the &#39;2200,01,02&#39; date, if the value received through integration is not a valid date</description>
    <formula>if( OR(ISNULL(leaseworks__Available_From__c), leaseworks__Available_From__c ==DATE(2200,01,02)),TODAY(),leaseworks__Available_From__c)</formula>
    <label>Available From</label>
    <type>Date</type>
</CustomField>