force-app/main/default/objects/leaseworks__Portal_Asset__c/fields/leaseworks__External_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__External_Id__c</fullName>
    <inlineHelpText>&#39;This hidden field is used for data loading and transferring data between instances. Only use it for mapping data during loading.&#39;</inlineHelpText>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>