force-app/main/default/objects/leaseworks__Portal_Asset__c/fields/leaseworks__Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Internal_Id__c</fullName>
    <label>Internal Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>