force-app/main/default/objects/leaseworks__Portal_Asset__c/fields/leaseworks__Limiter__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Limiter__c</fullName>
    <label>Limiter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>