force-app/main/default/objects/leaseworks__Portal_Asset__c/fields/leaseworks__Portal_Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Portal_Asset_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Template</label>
    <referenceTo>leaseworks__Portal_Asset_Template__c</referenceTo>
    <relationshipLabel>Portal Assets</relationshipLabel>
    <relationshipName>Portal_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>