force-app/main/default/objects/leaseworks__Portal_Asset__c/fields/leaseworks__TSO__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSO__c</fullName>
    <label>TSO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>