force-app/main/default/objects/leaseworks__Portal_Asset__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Asset_Class__c</columns>
    <columns>leaseworks__Asset_Type__c</columns>
    <columns>leaseworks__Asset_Variant__c</columns>
    <columns>leaseworks__Available_From__c</columns>
    <columns>leaseworks__EGT_Margin__c</columns>
    <columns>leaseworks__PMA_DER__c</columns>
    <columns>leaseworks__Portal_Asset_Template__c</columns>
    <columns>leaseworks__Remaining_Cycles__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>